test/corpus/based3dx.txt
==================
Standard d3d11.ini Loader Section
==================
[Loader]
target = GenshinImpact.exe
loader = XXMI Launcher.exe
launch = C:\Games\Genshin Impact\DATA\Genshin Impact game\GenshinImpact.exe
module = d3d11.dll
require_admin = true
delay = 20
---
(source_file
  (loader_section
    target: (string)
    loader: (path)
    launch: (path)
    module: (path)
    require_admin: (boolean)
    delay: (integer)
  )
)
==================
Standard d3d11.ini Include Section
==================
[Include]
include = Core\GIMI\main.ini
include_recursive = Mods
exclude_recursive = DISABLED*
exclude_recursive = desktop.ini
---
(source_file)
==================
Standard d3d11.ini Hunting Section
==================
[Hunting]
hunting = 0
marking_mode = skip
next_marking_mode = no_modifiers VK_DECIMAL VK_NUMPAD0
marking_actions = clipboard
previous_pixelshader = no_modifiers NO_VK_DECIMAL VK_NUMPAD1
next_pixelshader = no_modifiers NO_VK_DECIMAL VK_NUMPAD2
mark_pixelshader = no_modifiers NO_VK_DECIMAL VK_NUMPAD3
previous_vertexshader = no_modifiers NO_VK_DECIMAL VK_NUMPAD4
next_vertexshader = no_modifiers NO_VK_DECIMAL VK_NUMPAD5
mark_vertexshader = no_modifiers NO_VK_DECIMAL VK_NUMPAD6
previous_indexbuffer = no_modifiers NO_VK_DECIMAL VK_NUMPAD7
next_indexbuffer = no_modifiers NO_VK_DECIMAL VK_NUMPAD8
mark_indexbuffer = no_modifiers NO_VK_DECIMAL VK_NUMPAD9
previous_vertexbuffer = no_modifiers NO_VK_DECIMAL VK_DIVIDE
next_vertexbuffer = no_modifiers NO_VK_DECIMAL VK_MULTIPLY
mark_vertexbuffer = no_modifiers NO_VK_DECIMAL VK_SUBTRACT
previous_computeshader = no_modifiers VK_DECIMAL VK_NUMPAD1
next_computeshader = no_modifiers VK_DECIMAL VK_NUMPAD2
mark_computeshader = no_modifiers VK_DECIMAL VK_NUMPAD3
previous_geometryshader = no_modifiers VK_DECIMAL VK_NUMPAD4
next_geometryshader = no_modifiers VK_DECIMAL VK_NUMPAD5
mark_geometryshader = no_modifiers VK_DECIMAL VK_NUMPAD6
previous_domainshader = no_modifiers VK_DECIMAL VK_NUMPAD7
next_domainshader = no_modifiers VK_DECIMAL VK_NUMPAD8
mark_domainshader = no_modifiers VK_DECIMAL VK_NUMPAD9
previous_hullshader = no_modifiers VK_DECIMAL VK_DIVIDE
next_hullshader = no_modifiers VK_DECIMAL VK_MULTIPLY
mark_hullshader = no_modifiers VK_DECIMAL VK_SUBTRACT
done_hunting = NO_MODIFIERS NO_VK_DECIMAL VK_ADD
take_screenshot = no_modifiers VK_SNAPSHOT
reload_fixes = no_modifiers VK_F10
toggle_hunting = no_modifiers NO_VK_DECIMAL VK_NUMPAD0
reload_config = no_modifiers VK_F10
wipe_user_config = ctrl alt no_shift VK_F10
show_original = no_modifiers VK_F9
monitor_performance = ctrl no_shift no_alt F9
freeze_performance_monitor = no_ctrl shift no_alt F9
monitor_performance_interval = 2.0
repeat_rate = 6
verbose_overlay = 1
analyse_frame = no_modifiers VK_F8
analyse_options = dump_rt dump_tex dump_cb dump_vb dump_ib buf txt
---
(source_file)
==================
Standard d3d11.ini Constants Section
==================
[Constants]
global $costume_mods = 1
---
(source_file)
==================
Standard d3d11.ini System Section
==================
[System]
proxy_d3d9=d3d9_helix.dll
proxy_d3d11=d3d11_helix.dll
load_library_redirect = 2
check_foreground_window = 1
allow_check_interface = 1
allow_create_device = 1
allow_platform_update = 1
skip_early_includes_load = 1
config_initialization_delay = 30
settings_auto_save_interval = 60
dll_initialization_delay = 0
screen_width = 1920
screen_height = 1080
---
(source_file)
==================
Standard d3d11.ini Device Section
==================
[Device]
upscaling = 0
full_screen = 0
force_stereo = 0
get_resolution_from = swap_chain
hide_cursor = 0
---
(source_file)
==================
Standard d3d11.ini Stereo Section
==================
[Stereo]
automatic_mode = 0
unlock_separation = 0
unlock_convergence = 0
create_profile = 0
force_no_nvapi = 0
---
(source_file)
==================
Standard d3d11.ini Rendering Section
==================
[Rendering]
shader_hash = 3dmigoto
override_directory = ShaderFixes
cache_directory = ShaderCache
storage_directory = ShaderFromGame
cache_shaders = 0
rasterizer_disable_scissor = 0
stereo_params = -1
ini_params = 120
assemble_signature_comments = 1
disassemble_undecipherable_custom_data = 1
patch_assembly_cb_offsets = 1
recursive_include = 1
export_fixed = 0
export_shaders = 0
export_hlsl = 0
dump_usage = 0
fix_sv_position = 0
texture_hash = 0
track_texture_updates = 0
---
(source_file)
==================
Standard d3d11.ini Profile Section
==================
[Profile]
---
(source_file)
==================
Standard d3d11.ini CommandListUnbindAllRenderTargets Section
==================
[CommandListUnbindAllRenderTargets]
run = BuiltInCommandListUnbindAllRenderTargets
---
(source_file)
==================
Standard d3d11.ini Present Section
==================
[Present]
; Example: Clear an ini param at the start of each frame:
---
(source_file
  (present_section
  (comment)))
==================
Standard d3d11.ini Logging Section
==================
[Logging]
calls = 0
input = 0
debug = 0
unbuffered = 0
force_cpu_affinity = 0
convergence = 0
separation = 0
debug_locks = 0
crash = 0
show_warnings = 1
---
(source_file)
