test/corpus/statement.txt
==================
Basic Statement
==================
[Present]
$value = 1
; comment
run = CommandListExample
---
(source_file
  (present_section
    (assignment
            (variable name: (identifier))
            (float))
    (comment)
    (commandlist
            (commandlist_larg)
            (commandlist_rarg))
    ))


==================
Basic namespaced header section
==================
namespace = test
condition = 1
; Comment

---
(source_file
  (header_section
    namespace: (string)
    condition: (eval_value)
    (comment)
  ))

==================
Basic header withoutnamesapcing
==================
; Comment
[Present]

---
(source_file
 (comment)
  (present_section))
==================
Shader Override declaration
==================
[ShaderOverrideHealthPS]
; Comment
hash = 4f028a0d23349e1f
allow_duplicate_hash = overrule

---
(source_file
  (shader_override
    name: (identifier)
    (comment)
    hash: (hash_16)
    allow_duplicate_hash: (allow_duplicate_hash_value)
  )
)

